@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Added callback when double-clicking file in a file chooser
+	  (STR #2346)
 	- Fixed label alignment (STR #2436)
 	- Added interface to set color chooser mode (STR #2407)
 	- Fixed compile errors when HAVE_LIBJPEG was not defined 
